--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
-/* TODO: write your design in CSS */
+body{
+  background: rgb(245,245,245);
+  color: green;
+  font-size: 25px;
+  font-family: Helvetica;
+}/* TODO: write your design in CSS */
